--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         
-        body {
+        body {f
             background-color: #f5f5f5;
             color: #333;
             line-height: 1.6;
@@ -140,7 +140,7 @@
     <header>
         <div class="container">
             <img src="https://via.placeholder.com/150" alt="Фото профиля" class="profile-img">
-            <h1>Иванов Иван</h1>
+            <h1>Dario Salviati</h1>
             <p>Студент IT-специальности</p>
             <div class="social-links">
                 <a href="https://github.com" target="_blank">📱</a>
@@ -215,4 +215,5 @@
         </div>
     </footer>
 </body>
+
 </html>
